<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorites"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ayuda"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings" />



</menu>