<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/mpThree"
    tools:context=".ui.principal.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans_semibold"
            android:text="@string/titleHelp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textThree"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textOne"
            android:text="@string/descriptionHelp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/mpTwo"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mpTwo"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textOne"
                android:text="@string/subjectHelp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_corners"
                android:padding="@dimen/mpThree" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/mpTwo"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mpTwo"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textOne"
                android:text="@string/descriptionInputHelp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_corners"
                android:maxLines="7"
                android:minLines="8"
                android:padding="@dimen/mpThree" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoEmail"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="@dimen/mpTwo"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sendHelp"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/radiusDefault" />

    </LinearLayout>

</LinearLayout>