<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sebastian.project.ui.principal.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_eventFragment"
            app:destination="@id/eventFragment" />
    </fragment>


    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.sebastian.project.ui.principal.favorites.FavoritesFragment"
        android:label="fragment_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.sebastian.project.ui.principal.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sebastian.project.ui.principal.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sebastian.project.ui.principal.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/eventFragment"
        android:name="com.sebastian.project.ui.principal.home.details.EventFragment"
        android:label="fragment_event"
        tools:layout="@layout/fragment_event" >
        <argument android:name="id"
            app:argType="long" />
    </fragment>

</navigation>