<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.authentication.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@drawable/rounded_authentication">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="42dp"
                android:layout_height="6dp"
                android:layout_marginVertical="@dimen/mpTwo"
                app:cardBackgroundColor="@color/gray"
                app:cardCornerRadius="@dimen/radiusDefault" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/mpThree">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textTwo"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/mpTwo"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textOne"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/mpThree"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGoEmail"
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/optionsOne"
                        android:textColor="@color/white"
                        app:cornerRadius="@dimen/radiusDefault" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGoPhone"
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="@android:color/transparent"
                        android:text="@string/optionsTwo"
                        android:textColor="@color/colorPrimary"
                        app:cornerRadius="@dimen/radiusDefault"
                        app:strokeColor="@color/colorPrimary"
                        app:strokeWidth="1dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/mpTwo">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/mpThree"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/google" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/socialOne"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/mpThree"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/socialTwo"
                            android:textColor="@color/colorAccent" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_marginVertical="@dimen/mpOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/mpMin"
                            android:text="@string/descriptionNoneAccount"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/textMin" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/mpMin"
                            android:text="@string/noneAccount"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textMin" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginVertical="@dimen/mpOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/mpMin"
                            android:text="@string/descriptionForgotAccount"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/textMin" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/mpMin"
                            android:text="@string/forgotAccount"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textMin" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>